--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,2 @@
-<div id="main-wrapper">
 
-  <app-header></app-header>
-
-  <app-sidebar></app-sidebar>
-
-  <!-- ============================================================== -->
-  <!-- Page wrapper  -->
-  <!-- ============================================================== -->
-  <div class="page-wrapper">
-
-    <!-- ============================================================== -->
-    <!-- Container fluid  -->
-    <!-- ============================================================== -->
-    <div class="container-fluid">
-
-      <app-breadcrumbs></app-breadcrumbs>
-
-      <!-- ============================================================== -->
-      <!-- Start Page Content -->
-      <!-- ============================================================== -->
-      <div class="row">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-body">
-              This is some text within a card block.
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- ============================================================== -->
-      <!-- End PAge Content -->
-      <!-- ============================================================== -->
-
-
-    </div>
-    <!-- ============================================================== -->
-    <!-- END Container fluid  -->
-    <!-- ============================================================== -->
-
-
-
-  </div>
-  <!-- ============================================================== -->
-  <!-- END Page wrapper  -->
-  <!-- ============================================================== -->
-
-</div>
+<router-outlet></router-outlet>
