--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,47 @@
-<p>
-  progress works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+
+        <h3 class="card-title">Barra de progreso</h3>
+
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+            [attr.aria-valuenow]="progress1" aria-valuemin="0" aria-valuemax="100" [style.width]="progress1 + '%'"></div>
+        </div>
+
+        <br>
+
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
+            [attr.aria-valuenow]="progress2" aria-valuemin="0" aria-valuemax="100" [style.width]="progress2 + '%'"></div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-incrementador nombre="Progress azul" [percent]="progress1" (changeValue)="progress1 = $event" ></app-incrementador>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-incrementador nombre="Progress verde" [percent]="progress2" (changeValue)="progress2 = $event" ></app-incrementador>
+
+      </div>
+    </div>
+  </div>
+
+</div>
